--- a/app/globals.css
+++ b/app/globals.css
@@ -3,31 +3,79 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+    --h1-font-size: 2.5rem;
+    --h2-font-size: 2rem;
+    --h3-font-size: 1.75rem;
+
+    --h1-line-height: 1.2;
+    --h2-line-height: 1.3;
+    --h3-line-height: 1.4;
+
+    --h1-font-weight: 400;
+    --h2-font-weight: 200;
+    --h3-font-weight: 200;
+
+    --h1-letter-spacing: -0.02em;
+    --h2-letter-spacing: -0.02em;
+    --h3-letter-spacing: -0.02em;
+
+    --primary: #eee;
+    --primary-muted: #c1c1c1;
+    --secondary: #bfbfbfcf;
+
+    --background: #0b1821;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+h1 {
+    font-size: var(--h1-font-size);
+    line-height: var(--h1-line-height);
+    font-weight: var(--h1-font-weight);
+    letter-spacing: var(--h1-letter-spacing);
+}
+
+h2 {
+    font-size: var(--h2-font-size);
+    line-height: var(--h2-line-height);
+    font-weight: var(--h2-font-weight);
+    letter-spacing: var(--h2-letter-spacing);
+}
+
+h3 {
+    font-size: var(--h3-font-size);
+    line-height: var(--h3-line-height);
+    font-weight: var(--h3-font-weight);
+    letter-spacing: var(--h3-letter-spacing);
+}
+
+::selection {
+    background-color: #eeeeee2b;
+    color: var(--text-secondary);
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+    margin: 0;
+    background-color: var(--background);
+    color: var(--primary);
+    min-height: 100vh;
+}
+
+body:before {
+    position: fixed;
+    width: 600px;
+    height: 600px;
+    content: '';
+    background-image: linear-gradient(to right, #48456d, #4f3f60);
+    z-index: -2;
+    top: -250px;
+    left: calc(50% - 200px);
+    border-radius: 50% 50% 0% 0%;
+    pointer-events: none;
+    filter: blur(250px);
+    opacity: 0.6;
 }
 
 @layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+    .text-balance {
+        text-wrap: balance;
+    }
 }
