--- a/app/globals.css
+++ b/app/globals.css
@@ -26,6 +26,16 @@
     --background: #0b1821;
 }
 
+@layer utilities {
+    .text-balance {
+        text-wrap: balance;
+    }
+}
+
+.container {
+    @apply mx-auto min-h-screen max-w-screen-lg px-6 py-12 md:px-12 md:py-20 lg:px-24 lg:py-0;
+}
+
 p {
     font-size: 1rem;
     font-weight: 400;
@@ -92,11 +102,5 @@ body:before {
     /* background: -webkit-linear-gradient(#ffbf58, #904928); */
     -webkit-background-clip: text;
     background-clip: text;
-    -webkit-text-fill-color:transparent
-}
-
-@layer utilities {
-    .text-balance {
-        text-wrap: balance;
-    }
+    -webkit-text-fill-color: transparent;
 }
