--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,36 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-
-:root {
-    --h1-font-size: 1.75rem;
-    --h2-font-size: 1.5rem;
-    --h3-font-size: 1.25rem;
-
-    --h1-line-height: 1.2;
-    --h2-line-height: 1.3;
-    --h3-line-height: 1.4;
-
-    --h1-font-weight: 400;
-    --h2-font-weight: 200;
-    --h3-font-weight: 300;
-
-    --h1-letter-spacing: -0.02em;
-    --h2-letter-spacing: -0.02em;
-    --h3-letter-spacing: -0.02em;
-
-    --title-font-size: 2.5rem;
-    --title-font-weight: 400;
-
-    --subtitle-font-size: 1.5rem;
-    --subtitle-font-weight: 300;
-
-    --primary: #eee;
-    --primary-muted: #c1c1c1;
-    --secondary: #bfbfbfcf;
-
-    --background: #0b1821;
-}
+@import './variables.css';
 
 @layer utilities {
     .text-balance {
