--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,6 +15,7 @@
 }
 
 p {
+    color: var(--primary-muted);
     font-size: 15px;
     font-weight: 300;
     line-height: 28px;
@@ -57,7 +58,7 @@ body {
     color: var(--primary);
     min-height: 100vh;
     user-select: none;
-    -webkit-user-select : none;
+    -webkit-user-select: none;
 }
 
 body:before {
