--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,6 +14,13 @@
     @apply mx-auto min-h-screen max-w-screen-lg px-6 py-12 md:px-12 md:py-20 lg:px-24 lg:py-0;
 }
 
+aside {
+    display: flex;
+    position: sticky;
+    max-height: 100vh;
+    overflow: hidden;
+}
+
 p {
     color: var(--primary-muted);
     font-size: 15px;
@@ -73,7 +80,7 @@ body:before {
     border-radius: 50% 50% 0% 0%;
     pointer-events: none;
     filter: blur(250px);
-    opacity: 0.6;
+    opacity: 0.8;
 }
 
 .title {
